--- a/text/ch5-summary.tex
+++ b/text/ch5-summary.tex
@@ -3,19 +3,19 @@
 \minitoc
 
 \section{Summary}
-This thesis explored the post-ponderomotive interaction between high power laser systems and solid density targets. Chapter \ref{ch:2-zvp} explored the ZVP mechanism developed by Baeva and extended by Savin. It is instructive to refer to the future avenues suggested by Savin \cite{savinModellingLaserPlasmaInteractions2019}. All have been addressed. An experimental campaign to observe ZVP is underway. An analytical model for the observed inverse scaling of absorption with similarity theory for the ZVP regime has been developed and discussed and has been related to \ac{CSE}. An extensive QED parameter scan was performed. The results were somewhat unexpected but inspired an extension of the theory to demonstrate the transition to QED is dependent on system parameters via the ZVP mechanism.
+This thesis explored the post-ponderomotive interaction between high-power laser systems and solid-density targets. Chapter \ref{ch:2-zvp} explored the ZVP mechanism developed by Baeva and extended by Savin. It is instructive to refer to the future avenues suggested by Savin \cite{savinModellingLaserPlasmaInteractions2019}. Almost all have been addressed. An experimental campaign to observe ZVP is underway. An analytical model for the observed inverse scaling of absorption with similarity theory for the ZVP regime has been developed and discussed and has been related to \ac{CSE} and an extensive QED parameter scan was performed. The results were somewhat unexpected but inspired an extension of the theory to demonstrate the transition to QED is dependent on system parameters via the ZVP mechanism.
 
-% TODO: PIC simulation of HHG beam interacting with matter
+Beyond the scope suggested by Savin, this chapter extended the theory of ZVP to account for oblique incidence and mass-limited attosecond electron bunches, whose properties were thoroughly interrogated. The first 3D PIC simulations identifying ZVP and the first 2D parameter scan for the confirmation of energy absorption were performed. The results of previous studies were validated using a more direct methodology where individual bunch energies were extracted.
 
-Beyond the scope suggested by Savin, this chapter extended the theory of ZVP to account for oblique incidence and mass-limited attosecond electron bunches, whose properties were thoroughly interrogated. The first 3D PIC simulations of ZVP were performed and the first 2D paramter scan for confirmation of energy absorption performed, confirming the results of previous studies using a more direct methodology where individual bunch energies were extracted.
+Chapter \ref{ch:3-orion} switched from theory to experiment and from ZVP to ROM, reporting on the results of the 2023 experimental campaign at ORION, supported by theoretical predictions and simulations. The theories of Baeva on the ROM model and Vincenti on hole boring were combined and applied to the calculation of absolute intensity through consideration of conservation of energy and extended to account for all gamma spikes for the sub-ps laser pulse. These results were compared to simulations before application to the ORION data. By consideration of the main sources of error, realistic limits on the predictions were made, finding reasonable agreement with the experimental results, suggesting the production of bright coherent attosecond X-ray harmonics and peak radiation field intensities beyond currently operational facility limits.
 
-Chapter \ref{ch:3-orion} switched from theory to experiment and from ZVP to ROM, reporting on the results of the 2023 experimental campaign at ORION, supported by theoretical predictions and simulations. The theories of Baeva on the ROM model and Vincenti on hole boring were combined and applied to the calculation of absolute intensity through consideration of conservation of energy and extended to account for all gamma spikes. These results were compared to simulations before application to the ORION data. By consideration of the main sources of error, realistic limits on the predictions were made, finding reasonable agreement with the experimental results. Suggesting the production of bright coherent attosecond X-ray harmonics and peak radiation field intensities beyond currently operation facility limits.
-
-Chapter \ref{ch:4-gemini} brought both previous chapters together discussing the upcoming GEMINI PW experiment and all its goals and perceived technical challenges that will pave the way for future work in this field.
+Chapter \ref{ch:4-gemini} brought both previous chapters together, discussing the upcoming GEMINI PW experiment and all its goals and perceived technical challenges that will pave the way for future work in this field.
 
 \section{Beyond GEMINI PW and future work}\label{sec:ch4-beyond}
-While all of Savin's suggestions have been explored, as is the nature of scientific research, new results are like a chain reaction, producing an exponential expansion of ideas. Many of the theoretical ideas of this thesis will not be tested in the upcoming experiment but could form part of future beamtime proposals. It would be particularly interesting to demonstrate in experiment the heating effect of the XHHG beam or to attempt a more direct inference of the new peak intensity of the magnified harmonic beam. X-ray measurement on GEMINI could be combined with some of the single attosecond pulse ideas, for example polarisation gating, to generate and measure the intensity of an isolated attosecond X-ray pulse. To fully probe ZVP theory would require a full parameter scan in target density. Foam targets would gain access to the optimal low $S$ regime \cite{bataniPhysicsIssuesShock2014} without the need for preplasma formation. To truly demonstrate the attosecond duration of the ZVP electron bunches would require imaging of their XUV CTR harmonics.
+While all of Savin's suggestions have been explored, as is the nature of scientific research, new results are a chain reaction, producing an exponential expansion of ideas. Many of the theoretical ideas of this thesis will not be tested in the upcoming experiment but could form part of future beamtime proposals. It would be particularly interesting to demonstrate in experiment the heating effect of the XHHG beam or to attempt a more direct inference of the new peak intensity of the magnified harmonic beam. X-ray measurement on GEMINI could be combined with one of the isolating attosecond pulse ideas, for example, polarisation gating, to generate and measure the intensity of an isolated attosecond X-ray pulse. To fully probe ZVP theory would require a full parameter scan in target density. Foam targets would gain access to the optimal low $S$ regime \cite{bataniPhysicsIssuesShock2014} without the need for preplasma formation. To truly demonstrate the attosecond duration of the ZVP electron bunches would require imaging of their XUV CTR harmonics.
 
-On the side of the simulations, it is indispensable, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work, it was assumed that the optima for electron bunch production are simply those for \ac{HHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection. Now that attosecond ZVP electron bunches can be produced, options must be explored for their guidance and application. The QED ZVP produced several interesting results. It must be redressed to understand the rapid rise in BW energy and to further justify the theory for the transition to QED and look further for the tranistion to SF-QED. Computational limits precluded the full reconstruction of the ORION X-ray harmonic beam even in 1D. These limits could be stretched by the arrival of GPU supercomputing architectures, currently being tested on ARCHER2. 
+On the side of the simulations, it is indispensable, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work, it was assumed that the optima for electron bunch production are simply those for \ac{HHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection. 
 
-The return of SHHG study to CLF after more than a decade hiatus is certainly an indicator of the wider renewed interest in the field. This is in part spurred on by the recent Nobel Prize for attosecond physics and the rapid adoption of multi-petawatt class faciliites globally. Vulcan 20-20 is only around the corner. Set to be the world's most powerful laser, this ambitious laser facility will provide 200 J in 20 fs. With the capability to access triple digits of peak normalised vector potentials it is ideally suited to the study of X-ray HHG and ZVP. The GEMINI PW experiment will build expertise providing poof of principle results with a bright future in mind.
+Now that attosecond ZVP electron bunches can be produced, options must be explored for their guidance and application. The QED ZVP produced several interesting results. It must be redressed to understand the rapid rise in BW energy and justify the theory for the transition to QED and look further for the transition to SF-QED. Computational limits precluded the full reconstruction of the ORION X-ray harmonic beam even in 1D. These limits could be stretched by the arrival of GPU supercomputing architectures, currently being tested on ARCHER2. 
+
+The return of SHHG study to the CLF after more than a decade hiatus is certainly an indicator of the wider renewed interest in the field. This is in part spurred on by the recent Nobel Prize for attosecond physics and the rapid adoption of multi-petawatt class facilities globally. Vulcan 20-20 is only around the corner. Set to be the world's most powerful laser, this ambitious laser facility will provide 200 J in 20 fs. With the capability to access triple digits of peak normalised vector potentials, it is ideally suited to the study of X-ray HHG and ZVP. The GEMINI PW experiment will build expertise providing proof of principle results with a bright future in mind.
