--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -1,6 +1,6 @@
 % First parameter can be changed eg to "Glossary" or something.
 % Second parameter is the max length of bold terms.
-\begin{mclistof}{A List of Symbols and Abbreviations}{3.2cm}
+\begin{mclistof}{List of Symbols and Abbreviations}{3.2cm}
 \item[Note] All quantities are defined in SI units unless otherwise specified throughout the thesis.
 \item[$\alpha$] Twiss parameter = $-\frac{\langle x_i x'_i \rangle}{\epsilon^i_\mathrm{rms}}$
 \item[$a_0$] Normalised vector potential $= \frac{e|\mathbf{E}_\mathrm{L}|}{m_\mathrm{e}c\omega_\mathrm{L}}$
@@ -102,45 +102,32 @@
 \item[primed coordinates and reference frames] Still need to sort
 
 \item[1D, 2D, 3D] One-, two- or three-dimension(al)
+\item[AOI] Angle of Incidence
+\item[AR] Anti-Reflective
+\item[ARP] Apparent Reflection Point
+\item[BBXRD] BroadBand X-Ray Diffraction
 \item[BW] Breit-Wheeler
 \item[CLF] Central Laser Facility
 \item[CPA] Chirped Pulse Amplification
 \item[CSE] Coherent Synchrotron Emission
+\item[DPM] Double Plasma Mirror
 \item[FDTD] Finite Difference Time Domain
 \item[HB] Hole Boring
 \item[HED] High-Energy-Density
 \item[HHG] High Harmonic Generation
 \item[HPC] High Performance Computing
 \item[OHREX] ORION High Resolution X-ray
+\item[OMM] Oscillating Mirror Model
 \item[PIC] Particle-In-Cell
+\item[PM] Plasma Mirror
 \item[QED] Quantum Electro-Dynamics
 \item[ROM] Relativistic Oscillating Mirror
 \item[RPM] Relativistic Plasma Mirror
 \item[RR] Radiation Reaction
 \item[SF-QED] Strong-Field Quantum Electro-Dynamics
+\item[TCC] Target Chamber Centre
+\item[XHHG] X-ray High Harmonic Generation
+\item[VLA] Vacuum Laser Acceleration
 \item[ZVP] Zero Vector Potential
-
-\begin{acronym}
-	\acro{1D}{one-dimension}
-	\acro{2D}{two-dimensions}
-	\acro{3D}{three-dimensions}
-	\acro{BW}{Breit-Wheeler}
-	\acro{CLF}{Central Laser Facility}
-	\acro{CPA}{Chirped Pulse Amplification}
-	\acro{CSE}{Coherent Synchrotron Emission}
-	\acro{FDTD}{Finite Difference Time Domain}
-	\acro{HB}{Hole boring}
-	\acro{HED}{High-Energy-Density}
-	\acro{HHG}{High Harmonic Generation}
-	\acro{HPC}{High Performance Computing}
-	\acro{OHREX}{ORION High Resolution X-ray}
-	\acro{PIC}{Particle-In-Cell}
-	\acro{QED}{Quantum Electro-Dynamics}
-	\acro{ROM}{Relativistic Oscillating Mirror}
-	\acro{RPM}{Relativistic Plasma Mirror}
-	\acro{RR}{Radiation Reaction}
-	\acro{SF-QED}{Strong-Field Quantum Electro-Dynamics}
-	\acro{ZVP}{Zero Vector Potential}
-\end{acronym}
 
 \end{mclistof} 
