--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -8,7 +8,7 @@ Multi-petawatt laser facilities are now available across the globe for the study
 
 Electron bunch formation from solid targets has received much interest in recent years \cite{kulaginCharacteristicsRelativisticElectron2009, huEnhancedDenseAttosecond2015, cantonoExtensiveStudyElectron2018, serebryakovNearsurfaceElectronAcceleration2017, zhangGiantIsolatedAttosecond2020, hornyGenerationSingleAttosecond2021, ongElectronTransportNanowire2021, kulaginSubrelativisticInfraredTerahertz2021} with some experimental evidence for attosecond electron bunches from intense laser-solid interactions \cite{linIsolatedAttosecondElectron2020, cardenasSubcycleDynamicsRelativistic2019, thevenetVacuumLaserAcceleration2016}. This interest stems partially from their ability to produce higher charge bunches at lower intensities compared to gas targets \cite{linIsolatedAttosecondElectron2020}. This chapter proposes a new mass-limited target setup to generate electron bunches of extreme charge density. These electron bunches are fully characterised in 3D \ac{PIC} simulations to compare their quality to those of existing electron bunch production methods. They are described quantitatively via an extended version of the \ac{ZVP} Mechanism and the corresponding implications for laser to plasma energy absorption are also considered including the junction of \ac{ZVP} with \ac{SF-QED} effects that will be accessed by next-generation laser facilities. The \ac{ZVP} theory has direct relevance to \ac{HHG} due to the known intrinsic link between electron bunches and the reflection mechanism \cite{cousensElectronTrajectoriesAssociated2020, savinAttosecondscaleAbsorptionExtreme2017}.
 
-These results have excited the community to perform experiments to realise these electron bunches for the creation of ultra-bright X-ray pulses: after the recent successful campaign at the ORION laser facility, detailed in Section \ref{sec:ch3-orion}, details are given in Chapter \ref{sec:ch4-gemini} for the upcoming experiment to observe the electron bunches directly at the GEMINI PW laser at the Central Laser Facility, UK.
+These results have excited the community to perform experiments to realise these electron bunches for the creation of ultra-bright X-ray pulses: after the recent successful campaign at the ORION laser facility, detailed in Section \ref{ch:3-orion}, details are given in Chapter \ref{ch:4-gemini} for the upcoming experiment to observe the electron bunches directly at the GEMINI PW laser at the Central Laser Facility, UK.
 
 This Chapter is organised as follows. Section \ref{sec:zvp-intro} outlines the \ac{ZVP} mechanism including quantitative calculations of system properties. In Section \ref{sec:zvp-3Dsimulations} the first 3D PIC simulations to observe the ZVP mechanism are presented. Further PIC simulations are presented in Section \ref{sec:zvp-bunches} focusing now on the hot electron bunches produced via the mechanism, their properties, energy scalings and implications for \ac{SF-QED}. Finally, concluding remarks are given in Section \ref{sec:zvp-conclusion}.
 
@@ -467,9 +467,9 @@ Thus,
 \begin{equation}\label{eq:gamma}
 	\gamma = 1 + (0.31)\times \frac{a_0^2}{\bar{n}_\mathrm{e}} + F\times a_0'.
 \end{equation}
-This final term could be neglected or at least reduced somewhat once super-Gaussian spatial laser pulses become common in this intensity regime or by use of a suitable plasma separator \cite{miyauchiLaserElectronAcceleration2004}, as applied in \cite{andreevDoubleRelativisticElectron2013}. Both acceleration phases fail to meet the criteria of the Lawson-Woodward theorem. The ZVP phase is dependent on the existence of electrostatic forces, while the secondary phase occurs for a finite interaction region.
+The final term could be neglected or at least reduced somewhat once super-Gaussian spatial laser pulses become common in this intensity regime or by use of a suitable plasma separator \cite{miyauchiLaserElectronAcceleration2004}, as applied in \cite{andreevDoubleRelativisticElectron2013}. Both acceleration phases fail to meet the criteria of the Lawson-Woodward theorem. The ZVP phase is dependent on the existence of electrostatic forces, while the secondary phase occurs for a finite interaction region.
 
-The data of Figure \ref{fig:zvpmeangammas} is taken from two measurement points, enabling two $F$ values to be investigated. Fits to Equation \ref{eq:gamma} were made for each data set using the Ordinary Least Squares regression model of the statsmodels Python module \cite{seabold2010statsmodels}, allowing the constants to vary. The non-linear ZVP energy can be applied to the linear model via construction of the necessary composite parameter. Both fits were successful with $r^2$-values of 0.81 and 0.84 and found the same ZVP pre-factor $F_\mathrm{ZVP} = 0.47 \pm 0.02$, slightly above that anticipated from the model. The model is sensitive to the laser pulse intensity, likely much of the bunch originated from closer to the laser pulse focus than the target corner explaining the higher value.
+The data of Figure \ref{fig:zvpmeangammas} is taken from two measurement points, enabling two $F$ values to be investigated. Fits to Equation \ref{eq:gamma} were made for each data set using the Ordinary Least Squares regression model of the statsmodels Python module \cite{seaboldskipperandperktoldjosefStatsmodelsEconometricStatistical2010}, allowing the constants to vary. The non-linear ZVP energy can be applied to the linear model via construction of the necessary composite parameter. Both fits were successful with $r^2$-values of 0.81 and 0.84 and found the same ZVP pre-factor $F_\mathrm{ZVP} = 0.47 \pm 0.02$, slightly above that anticipated from the model. The model is sensitive to the laser pulse intensity, likely much of the bunch originated from closer to the laser pulse focus than the target corner explaining the higher value.
 
 The first data set measurement point was (\qty{0.41}{\mu m}, \qty{0.25}{\mu m}) from the target edge. This gives $F = 0.31$ compared to $0.22 \pm 0.02$ predicted by the fit. The second, at (\qty{0.41}{\mu m}, \qty{0.31}{\mu m}) from the target edge giving $F = 0.39$ compared to $0.34 \pm 0.02$ from the fit.
 
