--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -13,7 +13,7 @@ This chapter reports on the March 2023 experimental campaign at ORION to observe
 
 \section{\label{ch:3-sec:theory}Theory}
 \subsection{The ROM model}
-For the moderately relativistic sub-picosecond ORION SP1 and SP2 beamlines, the most appropriate description for their non-linear interaction with a solid density target is the Relativistic Oscillating Mirror (ROM) model. The full technical formulation constitutes the main body of Baeva's 2008 thesis \cite{baevaHighHarmonicGeneration2008}, a notably more rigorous derivation than the original paper on the same topic \cite{baevaTheoryHighorderHarmonic2006}. This is achieved via application of the highly generalised \ac{ARP} formalism to the case of $S>1$ in relativistic similarity theory, showing that the \ac{ARP} coincides with the relativistic critical density surface. This section provides a more qualitative, physically motivated description of this theory, the salient point of Baeva's thesis being that, while the surface motion is generally complex and parameter space dependent, at the short moment in time when most high harmonics are generated, the surface motion is always parabolic. By application of the Bourdier method, detailed in Appendix \ref{sec:app-bourdier} \cite{bourdierObliqueIncidenceStrong1983}, Baeva demonstrated that the envelope of the spectral content of the reflected beam does not deviate from the normal incidence linearly polarised case for either s- or p-polarised incidence. Hence, the following discussion is restricted to normal incidence. It begins with relativistic similarity theory and Equation \ref{{eq:intro-p_similarity}}, $\mathbf{p} \sim a_0$. As discussed in Section \ref{sec:zvp-intro}, microscopically electrons follow similar relativistic trajectories. However, from Equation \ref{eq:zvp-vprop}, $v_\mathrm{prop}$, the velocity of electrons along the propagation axis of the laser pulse, is not necessarily relativistic except at the passing of the zero of the vector potential where $v_\mathrm{prop} \to c$. Macroscopically, the well-defined critical density surface within the skin depth (located at $S =1$), has a gamma factor that tracks the electrons' velocity along the propagation direction ($x$-direction) at that point,
+For the moderately relativistic sub-picosecond ORION SP1 and SP2 beamlines, the most appropriate description for their non-linear interaction with a solid density target is the Relativistic Oscillating Mirror (ROM) model. The full technical formulation constitutes the main body of Baeva's 2008 thesis \cite{baevaHighHarmonicGeneration2008}, a notably more rigorous derivation than the original paper on the same topic \cite{baevaTheoryHighorderHarmonic2006}. This is achieved via application of the highly generalised \ac{ARP} formalism to the case of $S>1$ in relativistic similarity theory, showing that the \ac{ARP} coincides with the relativistic critical density surface. This section provides a more qualitative, physically motivated description of this theory, the salient point of Baeva's thesis being that, while the surface motion is generally complex and parameter space dependent, at the short moment in time when most high harmonics are generated, the surface motion is always parabolic. By application of the Bourdier method, detailed in Appendix \ref{sec:app-bourdier} \cite{bourdierObliqueIncidenceStrong1983}, Baeva demonstrated that the envelope of the spectral content of the reflected beam does not deviate from the normal incidence linearly polarised case for either s- or p-polarised incidence. Hence, the following discussion is restricted to normal incidence. It begins with relativistic similarity theory and Equation \ref{eq:intro-p_similarity}, $\mathbf{p} \sim a_0$. As discussed in Section \ref{sec:zvp-intro}, microscopically electrons follow similar relativistic trajectories. However, from Equation \ref{eq:zvp-vprop}, $v_\mathrm{prop}$, the velocity of electrons along the propagation axis of the laser pulse, is not necessarily relativistic except at the passing of the zero of the vector potential where $v_\mathrm{prop} \to c$. Macroscopically, the well-defined critical density surface within the skin depth (located at $S =1$), has a gamma factor that tracks the electrons' velocity along the propagation direction ($x$-direction) at that point,
 \begin{equation}\label{eq:orion-gamma_s}
 	\gamma_\mathrm{s} = \frac{1}{\sqrt{1-v_\mathrm{prop}^2/c^2}} = \sqrt{ \frac{1 + a(t,x)^2 +  p_\mathrm{prop}^2/(m_\mathrm{e}c)^2}{1 + a(t,x)^2}}.
 \end{equation}
@@ -57,7 +57,7 @@ This represents a balance of the electric fields at the ARP. Decomposing into th
 \end{equation}
 for all $t$. Applying the approximation of a plane wave, the phase structure at the reflection point is maintained as the reflected wave propagates away from the interaction region to the observation point ($E_\mathrm{r}(x_\mathrm{s}(t) - ct) = E_\mathrm{r}(x' - ct')$ for an observation point $(x',t')$ near an electric field peak.). Thus, determining the modulation of the reflected beam is akin to solving Equation \ref{eq:orion-Ei_Er}. 
 
-Writing $\Phi = x_\mathrm{s}(t) - ct$, $\Psi = x_\mathrm{s}(t) + ct$ and taking the time derivative of Equation \ref{{eq:orion-Ei_Er}},
+Writing $\Phi = x_\mathrm{s}(t) - ct$, $\Psi = x_\mathrm{s}(t) + ct$ and taking the time derivative of Equation \ref{eq:orion-Ei_Er},
 \begin{equation}
 	\frac{\mathrm{d}E_\mathrm{r}(\Psi)}{\mathrm{d}\Psi} = \frac{c - \mathbf{v}_\mathrm{s}(t)}{c+\mathbf{v}_\mathrm{s}(t)}\frac{\mathrm{d}E_\mathrm{i}(\Phi)}{\mathrm{d}\Phi}
 \end{equation}
@@ -186,7 +186,7 @@ At the peak of the main pulse,
 \end{equation}
 where $G = \int_\infty^{t_0} g(t-t_0) \mathrm{d} t \sim t_\mathrm{L}$ and $t_\mathrm{L}$ is the laser pulse temporal width.
 
-The total denting is a combination of the peak electron-ion charge separation, $x_\mathrm{e}$ (which leads to the intrinsic phase of the HHG beam \cite{anderbruggePropagationRelativisticSurface2007}) and Equation \ref{eq:xi_t}. Note that for the long pulse duration of the ORION laser, $x_\mathrm{i} \gg x_\mathrm{e}$ and therefore $x_\mathrm{e}$ can be neglected.
+The total denting is a combination of the peak electron-ion charge separation, $x_\mathrm{e}$ (which leads to the intrinsic phase of the HHG beam \cite{derbruggePropagationRelativisticSurface2007}) and Equation \ref{eq:xi_t}. Note that for the long pulse duration of the ORION laser, $x_\mathrm{i} \gg x_\mathrm{e}$ and therefore $x_\mathrm{e}$ can be neglected.
 
 Applying a Taylor expansion to the spatial profile of Equation \ref{eq:xi_t} around the laser spot centre,
 \begin{equation}
@@ -247,7 +247,7 @@ At large distances,
 Taking the Taylor expansion of the tangent, one sees that the magnification factor is only weakly dependent on the harmonic source size ($f_\mathrm{p}$ is independent of the source size), whereas the magnification is strongly dependent on the laser spot size ($\sim w_\mathrm{L}^4$).
 
 At the new \ac{RPM} focal point, $z = z_\mathrm{f}$, the demagnification factor is \cite{vincentiOpticalPropertiesRelativistic2014}
-\begin{equation}
+\begin{equation}\label{eq:orion-magnification}
 	\gamma_n(z_\mathrm{f}) = \frac{1}{\sqrt{1+\Psi_n^2}}.
 \end{equation}
 This determines the new peak intensity to be yielded by hole boring alone. A pre-curved target can achieve the same effect.
@@ -274,7 +274,7 @@ High-power laser systems have inherent prepulses of ionising intensities. They w
 
 For $L \leqq 0.02 \lambda_\mathrm{L}$, \ac{CWE} dominates over HHG. Kahaly \textit{et al} demonstrated experimentally that harmonic emission varied smoothly from the CWE regime to the HHG regime to HHG suppression as the laser contrast was reduced  \cite{kahalyDirectObservationDensityGradient2013}. Increasing the preplasma scale length increases the amplitude of surface oscillations, increasing HHG production. However, if the scale length is too large, parametric instabilities in the underdense region begin to dominate and HHG is suppressed \cite{dollarScalingHighorderHarmonic2013}. The use of 1D hydrodynamic codes to measure prepulses from laser contrast trace measurements has become standard practice \cite{behmkeControllingSpacingAttosecond2011, dollarScalingHighorderHarmonic2013, liExperimentalDemonstrationEfficient2022}. Although, this shall be called into question in the following chapter.
 
-Fortunately, there are many approaches to control the various steps of preplasma generation. The heating effect of the prepulse can be reduced by reducing the angle of incidence or the prepulse itself can be reduced by reducing the intensity of the beam through apodisation or use of a frequency doubling crystal. As discussed in Chapter \ref{ch:1-introduction}, a PM or chain of PMs are a crude tool to dramatically improve the laser contrast. A secondary beamline can generate a more precise controllable prepulse \cite{kahalyDirectObservationDensityGradient2013}, or the surface can be recompressed using a circularly polarised prepulse that will cause minimal heating \cite{liExperimentalDemonstrationEfficient2022}.
+Fortunately, there are many approaches to control the various steps of preplasma generation. The heating effect of the prepulse can be reduced by reducing the angle of incidence or the prepulse itself can be reduced by reducing the intensity of the beam through apodisation or use of a frequency doubling crystal. As discussed in Chapter \ref{ch:1-intro}, a PM or chain of PMs are a crude tool to dramatically improve the laser contrast. A secondary beamline can generate a more precise controllable prepulse \cite{kahalyDirectObservationDensityGradient2013}, or the surface can be recompressed using a circularly polarised prepulse that will cause minimal heating \cite{liExperimentalDemonstrationEfficient2022}.
 
 \section{\label{ch:3-sec:simulations}Simulations}
 \subsection{1D PIC simulations of HHG}
@@ -394,7 +394,7 @@ The filtered beam consists of a series of attosecond pulses of radiation, the br
 
 % TODO NO Confident now that in the theory of ROM HHG for ORION parameters, there is one final consideration that cannot be observed in 1D. The SP1 beamline consists of two beamlets. Am I including this or not? For this simulation, the Bouchard solver was applied.
 
-\subsection{Hydrodynamic simulations of preplasma formation}\ref{sec:orion-hydro}
+\subsection{Hydrodynamic simulations of preplasma formation}\label{sec:orion-hydro}
 Following Dollar \textit{et al} \cite{dollarScalingHighorderHarmonic2013}, hydrodynamic simulations of the ORION laser systems were performed using HYADES to confirm the suitability of the contrast conditions.
 
 Simulations were performed in 1D planar geometry with a mesh of 511 evenly spaced points covering \qty{20}{\mu m} of the target (SiO2, PMMA, CVD, etc). Equation of state data was taken from the in-built HYADES data tables. For low temperatures and pressures, the data for the minimum values in the tables are used, for temperatures and pressures above the highest values recorded in the tables, the values are linearly extrapolated from this point. Ionisation was calculated using the local thermal equilibrium average atom model. Low temperature ($T < 0.15 eV$) values for the absorption and refractive indices of the target materials were input \cite{polyanskiyRefractiveindexInfoDatabase2024}.
@@ -439,7 +439,7 @@ Figure \ref{fig:orionscalelengthparameterscan} repeats the analysis of \ref{fig:
 \end{figure}
 The s-polarised light simulations follow a clear trend: increasing incident laser energy leads to an increased scale length up to a transition point that will be determined by the point at which hole boring overcomes plasma expansion. This will depend on the interplay of target ion density, ionisation potential and heating. Interestingly, the trend is much less consistent for p-polarised light. It is known that heating increases for p-polarised light as there is now a component of the laser pulse electric field acting into the plasma, however, the crossing of the high and low intensities suggests a dynamic balance between hole boring and plasma heating. Regardless, the change in scale length is not significant at these PM reflectivities. Unfortunately, it was not possible to conduct a similar parameter scan for the CVD targets, it would appear that the EOS tables provided for such a target material are not suited for this interaction type. However, one can assume that the preplasma scale lengths of irradiated CVD targets would be lower than those established in Figure \ref{fig:orionscalelengthparameterscan} due to the high damage threshold of the material. 
 
-The question of plasma temperature, raised with regards to the initialisation of PIC code main pulse simulations as presented in Chapter \ref{ch:zvp}, can now be redressed. Figure \ref{fig:oriontemperature} plots the plasma electron temperature from 40 ps before the main pulse arrives.
+The question of plasma temperature, raised with regards to the initialisation of PIC code main pulse simulations as presented in Chapter \ref{ch:2-zvp}, can now be redressed. Figure \ref{fig:oriontemperature} plots the plasma electron temperature from 40 ps before the main pulse arrives.
 \begin{figure}
 	\centering
 	\includegraphics{figures/orion/orion_temperature}
