--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -59,7 +59,7 @@ Emitted electron bunch energies are maximised by focusing the 2 micron laser spo
 
 While normal incidence was most convenient for the initial ZVP simulations, oblique incidence is better for \ac{HHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and, as can be understood from Equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions, for the ZVP mechanism. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{HHG} beam intensity at the focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is necessary to conduct PIC code parameter scans for this new geometry.
 
-High target edge precision is essential for the generation of attosecond duration ZVP electron bunches. The CLF Target Fabrication team has produced 200 $\mu$m silicon wafer targets with well-defined edges of sub-micron precision via the Bosch process. The target design is presented in Figure \ref{geminisiliconwafer}a.
+High target edge precision is essential for the generation of attosecond duration ZVP electron bunches. The CLF Target Fabrication team has produced 200 $\mu$m silicon wafer targets with well-defined edges of sub-micron precision via the Bosch process. The target design is presented in Figure \ref{fig:geminisiliconwafer}a.
 \begin{figure}
 	\centering
 	\includegraphics{figures/gemini/gemini_silicon_wafer}
