--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -88,7 +88,7 @@
 % Your full degree name.  (But remember that DPhils aren't "in" anything.  They're just DPhils.)
 \degree{Doctor of Philosophy}
 % Term and year of submission, or date if your board requires (eg most masters)
-\degreedate{Michaelmas 2014}
+\degreedate{Trinity 2024}
 
 
 %%%%% YOUR OWN PERSONAL MACROS
@@ -181,6 +181,8 @@
 
 % This is where the whole-document ToC appears:
 \tableofcontents
+
+\include{text/publications}
 
 \listoffigures
 	\mtcaddchapter
